# rustBoot

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  DCO.md  LICENSE  README.md
boards/: .gitignore  Cargo.toml
boards/.cargo/: config.toml
boards/bootloaders/imx8mn/: Cargo.toml  debug.md  link.lds
boards/bootloaders/imx8mn/.cargo/: config.toml
boards/bootloaders/imx8mn/src/: boot.rs  entry.S  main.rs
boards/bootloaders/nrf52840/: Cargo.toml  memory.x
boards/bootloaders/nrf52840/.cargo/: config.toml
boards/bootloaders/nrf52840/src/: main.rs
boards/bootloaders/nrf9160/: Cargo.toml  README.md  build.rs  memory.x  no_region_asserts.x.in  nrf_region_asserts.x.in  trustzone_memory.x.in
boards/bootloaders/nrf9160/.cargo/: config.toml
boards/bootloaders/nrf9160/src/: main.rs
boards/bootloaders/rp2040/: Cargo.toml  memory.x
boards/bootloaders/rp2040/.cargo/: config.toml
boards/bootloaders/rp2040/src/: main.rs
boards/bootloaders/rpi4/: Cargo.toml  README.md  debug.md  kernel8.img  layout.ld  link.ld
boards/bootloaders/rpi4-test/: Cargo.toml  README.md  kernel8.img
boards/bootloaders/rpi4-test/.cargo/: config.toml
boards/bootloaders/rpi4-test/src/: boot.rs  main.rs
boards/bootloaders/rpi4/.cargo/: config.toml
boards/bootloaders/rpi4/apertis/: rbconfig.txt  rpi4-apertis.its  unpatched-bcm2711-rpi-4-b.dtb  update-rpi4-apertis.its  updt.txt
boards/bootloaders/rpi4/src/: boot.rs  dtb.rs  fit.rs  log.rs  main.rs  panic_wait.rs
boards/bootloaders/stm32f334/: Cargo.toml  memory.x
boards/bootloaders/stm32f334/.cargo/: config.toml
boards/bootloaders/stm32f334/src/: main.rs
boards/bootloaders/stm32f411/: Cargo.toml  memory.x
boards/bootloaders/stm32f411/.cargo/: config.toml
boards/bootloaders/stm32f411/src/: main.rs
boards/bootloaders/stm32f446/: Cargo.toml  readme.md
boards/bootloaders/stm32f446/.cargo/: config.toml
boards/bootloaders/stm32f446/src/: main.rs
boards/bootloaders/stm32f469/: Cargo.toml
boards/bootloaders/stm32f469/.cargo/: config.toml
boards/bootloaders/stm32f469/src/: main.rs
boards/bootloaders/stm32f746/: Cargo.toml  memory.x
boards/bootloaders/stm32f746/.cargo/: config.toml
boards/bootloaders/stm32f746/src/: main.rs
boards/bootloaders/stm32h723/: Cargo.toml  README.md  STM32H723.svd  debug.md  memory.x
boards/bootloaders/stm32h723/src/: main.rs
boards/firmware/nrf52840/boot_fw_blinky_green/: Cargo.toml
boards/firmware/nrf52840/updt_fw_blinky_red/: Cargo.toml  memory.x
boards/firmware/nrf9160/boot_fw_blinky_green/: Cargo.toml  build.rs  memory.x
boards/firmware/nrf9160/updt_fw_blinky_red/: Cargo.toml  build.rs  memory.x
boards/firmware/rp2040/boot_fw_blinky_green/: Cargo.toml  build.rs  memory.x
boards/firmware/rp2040/updt_fw_blinky_red/: Cargo.toml  memory.x
boards/firmware/stm32f334/boot_fw_blinky_green/: Cargo.toml  memory.x
boards/firmware/stm32f334/updt_fw_blinky_red/: Cargo.toml
boards/firmware/stm32f411/boot_fw_blinky_green/: Cargo.toml
boards/firmware/stm32f411/updt_fw_blinky_red/: Cargo.toml
boards/firmware/stm32f446/boot_fw_blinky_green/: Cargo.toml
boards/firmware/stm32f446/updt_fw_blinky_red/: Cargo.toml
boards/firmware/stm32f469/boot_fw_blinky_green/: Cargo.toml  memory.x
boards/firmware/stm32f469/updt_fw_blinky_red/: Cargo.toml
boards/firmware/stm32f746/boot_fw_blinky_green/: Cargo.toml
boards/firmware/stm32f746/updt_fw_blinky_red/: Cargo.toml  memory.x
boards/firmware/stm32h723/boot_fw_blinky_green/: Cargo.toml  memory.x
boards/firmware/stm32h723/updt_fw_blinky_red/: Cargo.toml
boards/hal/: Cargo.toml
boards/hal/src/: lib.rs
boards/hal/src/nrf/: mod.rs  nrf52840.rs  nrf9160.rs
boards/hal/src/nxp/: mod.rs
boards/hal/src/pico/: mod.rs  rp2040.rs
boards/hal/src/rpi/: mod.rs
boards/hal/src/stm/: mod.rs  stm32f334.rs  stm32f411.rs  stm32f446.rs  stm32f469.rs  stm32f746.rs  stm32h723.rs
boards/rbSigner/signed_images/: convert2bin.py  sign.py  signer.py
boards/rustBoot-hal/: Cargo.toml
boards/rustBoot-hal/src/: lib.rs
boards/rustBoot-hal/src/nrf/: mod.rs  nrf52840.rs
boards/rustBoot-hal/src/rpi/: mod.rs
boards/rustBoot-hal/src/stm/: mod.rs  stm32f411.rs
boards/rustBoot-update/: Cargo.toml
boards/rustBoot-update/src/: lib.rs
boards/rustBoot-update/src/hal/: hal.rs  mod.rs
boards/rustBoot-update/src/update/: mod.rs  update_flash.rs
boards/sign_images/keygen/: ecc256.der  pubkey.c
boards/signing_tools/signed_images/: convert2bin.py  nrf52840  signer.py
boards/test_firmware/nrf52840/boot_fw_blinky_blue/: Cargo.toml  memory.x
boards/test_firmware/nrf52840/boot_fw_blinky_green/: Cargo.toml
boards/test_firmware/nrf52840/updt_fw_blinky_red/: Cargo.toml  memory.x
boards/test_impls/nrf52840/: Cargo.toml  README.md  memory.x
boards/test_impls/nrf52840/.cargo/: config.toml
boards/test_impls/nrf52840/src/: main.rs
boards/test_impls/rpi4/: Cargo.toml  config.txt  kernel8.img  link.ld
boards/test_impls/rpi4/.cargo/: config.toml
boards/test_impls/rpi4/src/: boot.rs  main.rs  panic_wait.rs  state.rs  sync.rs
boards/update/: Cargo.toml
boards/update/src/hal/: hal.rs  mod.rs
boards/update/src/update/: update_flash.rs
rbsigner/: Cargo.toml
rbsigner/src/: curve.rs  fitsigner.rs  main.rs  mcusigner.rs
rustBoot/: Cargo.toml
rustBoot/examples/: dtb2rust.rs  fit.rs  fit_timestamp.rs  imx8mn-ddr4-evk.dtb  imx8mn-ddr4-evk.dts  nrf52840_example.rs  patch.rs  patch_chosen_node.rs  test.rs  updt_check.rs  verify_fit.rs
rustBoot/src/: cfgparser.rs  constants.rs  flashapi.rs  lib.rs  librustboot.rs  parser.rs  rbconstants.rs  target.rs
rustBoot/src/crypto/: mod.rs  signatures.rs
rustBoot/src/dt/: common.rs  fit.rs  internal.rs  mod.rs  patch.rs  reader.rs  struct_item.rs  writer.rs
rustBoot/src/dt/test_dtb/: bad_magic.dtb  bad_node_name.dtb  bad_property_name.dtb  bad_total_size.dtb  (+20 more)
rustBoot/src/fs/: blockdevice.rs  controller.rs  fat.rs  filesystem.rs  mod.rs
rustBoot/src/hal/: hal.rs
rustBoot/src/image/: image.rs  mod.rs  sealed.rs
rustBoot/src/update/: mod.rs  update_flash.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+179 files in other folders)
