[workspace]

members = ["rustBoot-update",
           "rustBoot-hal", 
           "test_firmware/*/*", 
           "test_impls/*"
           ]

exclude = ["test_firmware/rpi4"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
# debug = true
lto = true
opt-level = "s"
# panic = "abort"