[workspace]

resolver = "2"
members = ["rustBoot-update",
           "rustBoot-hal", 
           "firmware/*/*", 
           "bootloaders/*"
           ]

exclude = ["firmware/rpi4"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
# debug = true
lto = true
opt-level = "s"
# panic = "abort"