[workspace]

resolver = "2"
members = ["update",
           "hal", 
           "firmware/*/*", 
           "bootloaders/*"
           ]

exclude = ["firmware/rpi4"]

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
# debug = true
lto = true
opt-level = "s"
