[package]
name = "rustBoot"
version = "0.1.0"
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
edition = "2018"
categories = ["embedded", "no_std", "authentication"]
description = """
A micro-architecture agnostic, portable secure bootloader with firmware authentication 
and update capabilities, written in pure-Rust .
"""
documentation = ""
homepage = ""
keywords = ["security", "bootloader", "firmware", "authentication", "update"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nihalpasham/rustBoot"
# Each example should have an explicit `[[example]]` section here to
# ensure that the correct features are enabled.
# autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.0"
sha2 = {version = "0.9.2", default-features = false}
k256 = {version = "0.9.0", default-features = false, features = ["ecdsa"], optional = true}
p256 = {version = "0.9.0", default-features = false, features = ["ecdsa"]}
signature = {version = "1.3.1", default-features = false, features = ["digest-preview"]}
nom = {version = "7.1.0", default-features = false}
# libc-print = "0.1.16"

[dev-dependencies]
libc-print = "0.1.16"

[features]
ext_flash = []
sha256 = []
sha384 = []
nistp256 = ["p256/ecdsa","sha256"]
secp256k1 = ["k256/ecdsa","sha256"]
ed25519 = ["sha256"]
default = ["sha256", "nistp256", "defmt-default"]

# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

