[package]
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
categories = ["embedded", "no_std", "authentication"]
description = """
A micro-architecture agnostic, portable secure bootloader with firmware authentication 
and update capabilities, written in pure-Rust .
"""
documentation = ""
edition = "2018"
homepage = ""
keywords = ["security", "bootloader", "firmware", "authentication", "update"]
license = "MIT"
name = "rustBoot"
readme = "README.md"
repository = "https://github.com/nihalpasham/rustBoot"
version = "0.1.0"
# Each example should have an explicit `[[example]]` section here to
# ensure that the correct features are enabled.
# autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common dependencies
as-slice = "0.2.1"
byteorder = {version = "1.4.3", default-features = false}
defmt = {version = "0.3.1", optional = true}
log = {version = "0.4", default-features = false, optional = true}
# rustBoot parser dependencies
nom = {version = "7.1.0", default-features = false}
# crypto dependencies
k256 = {version = "0.9.0", default-features = false, features = ["ecdsa"], optional = true}
p256 = {version = "0.10.1", default-features = false, features = ["ecdsa", "pkcs8"]}
sha2 = {version = "0.9.9", default-features = false}
signature = {version = "1.3.1", default-features = false, features = ["digest-preview"]}

# libc-print = "0.1.16"

[dev-dependencies]
libc-print = "0.1.16"
log = {version = "0.4", default-features = false, features = ["std"]}

[features]
default = ["sha256", "nistp256", "log"]
ed25519 = ["sha256"]
ext_flash = []
nistp256 = ["p256/ecdsa", "sha256"]
secp256k1 = ["k256/ecdsa", "sha256"]
sha256 = []
sha384 = []
# boards specific features
mcu = []
nrf52840 = ["mcu"]
stm32f411 = ["mcu"]
stm32f446 = ["mcu"]
stm32h723 = ["mcu"]
stm32f746 = ["mcu"]
stm32f334 = ["mcu"]