[package]
authors = ["Nihal Pasham <Twitter: @npashi>"]
edition = "2018"
name = "xtask"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
rustBoot = {path = "../rustBoot"}
xshell = "0.1.9"

[features]
nrf52840 = ["rustBoot/nrf52840"]
stm32f411 = ["rustBoot/stm32f411"]
stm32f446 = ["rustBoot/stm32f446"]
stm32h723 = ["rustBoot/stm32h723"]
mcu = []