[package]
authors = ["Nihal Pasham <Twitter: @npashi>"]
edition = "2018"
name = "xtask"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
rustBoot = {path = "../rustBoot"}
xshell = "0.1.9"

[features]
nrf52840 = ["mcu", "rustBoot/nrf52840"]
stm32f411 = ["mcu", "rustBoot/stm32f411"]
stm32f446 = ["mcu", "rustBoot/stm32f446"]
stm32h723 = ["mcu", "rustBoot/stm32h723"]
stm32f746 = ["mcu", "rustBoot/stm32f746"]
stm32f334 = ["mcu", "rustBoot/stm32f334"]

mcu = []