[package]
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>", "Github: @imrank03 <immu0396@gmail.com>", "Github: @yashwanthsinghm <yashwanthsinghm@gmail.com>"]
categories = ["embedded", "no_std", "authentication"]
description = """
A hardware asbtraction layer for rustBoot. It contains HW-specific impls 
for board-specific programming, written in pure-Rust .
"""
documentation = ""
edition = "2018"
homepage = ""
keywords = ["security", "bootloader", "firmware", "authentication", "update"]
license = "MIT"
name = "rustBoot-hal"
readme = "README.md"
repository = "https://github.com/nihalpasham/rustBoot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# makes `cargo check --all-targets` (used by Rust-Analyzer) work
[lib]
bench = false
doctest = false
test = false

[dependencies]
# common dependencies
cortex-m = "0.7.3"
defmt = {version = "0.3.1", optional = true}
# platform specific dependencies for rpi4
# [target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = {version = "7.0.1", optional = true}
rustBoot = {path = "../../rustBoot", default-features = true, optional = true}
tock-registers = {version = "0.7.x", default-features = false, features = ["register_types"], optional = true}
# platform specific dependencies for nrf52840
nrf52840-hal = {version = "0.15.0", optional = true}
# platform specific dependencies for stm32f4 series
stm32f411-hal = {package = "stm32f4xx-hal", version = "0.10.1", features = ["rt", "stm32f411",], optional = true}
stm32f446-hal = {package = "stm32f4xx-hal", version = "0.9.0", features = ["rt", "stm32f446",], optional = true}
# platform specific dependencies for stm32h7 series
stm32h7xx-hal = {version = "0.12.2", features = ["stm32h735", "rt"], optional = true}
# platform specific dependencies for stm32f7 series
stm32f7xx-hal = {version = "0.7.0", features = ["stm32f746", "rt"],optional = true}
# platform specific dependencies for stm32f7 series
stm32f3xx-hal = {version = "0.8.0", features = ["stm32f334x8", "rt"],optional = true}

[features]
default = []
log = []

# board-specific features
nrf = []
nrf52840 = ["nrf", "nrf52840-hal"]
rpi = []
rpi4 = ["rpi", "tock-registers", "cortex-a", "rustBoot"]
stm = []
stm32f411 = ["stm", "stm32f411-hal"]
stm32f446 = ["stm", "stm32f446-hal"]
stm32h723 = ["stm", "stm32h7xx-hal"]
stm32f746 = ["stm", "stm32f7xx-hal"]
stm32f334 = ["stm", "stm32f3xx-hal"]