[package]
name = "rustBoot-hal"
version = "0.1.0"
edition = "2018"
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
categories = ["embedded", "no_std", "authentication"]
description = """
A hardware asbtraction layer for rustBoot. It contains the necessary HW-specific impls 
for flash programming for a specific board, written in pure-Rust .
"""
documentation = ""
homepage = ""
keywords = ["security", "bootloader", "firmware", "authentication", "update"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nihalpasham/rustBoot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# makes `cargo check --all-targets` (used by Rust-Analyzer) work
[lib]
bench = false
doctest = false
test = false

[dependencies]
defmt = "0.3.0"
cortex-m = "0.7.3"
nrf52840-hal = {version = "0.13.0", optional = true}

[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["rt", "stm32f411"]
optional = false

[features]
default = ["stm", "stm32f411", "defmt-default"]
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

nrf = []
nrf52840 = ["nrf"]

stm =[]
stm32f411 = ["stm"]