[package]
name = "rustBoot-update"
version = "0.1.0"
edition = "2018"
authors = ["Twitter: @npashi <nihal.pasham@gmail.com>"]
categories = ["embedded", "no_std", "authentication"]
description = """
This is a rustBoot dependency. It allows for multi-slot partitioning of a flash device 
and can be used to perform power-interruptible A/B updates.  
"""
documentation = ""
homepage = ""
keywords = ["security", "bootloader", "firmware", "authentication", "update"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nihalpasham/rustBoot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# makes `cargo check --all-targets` (used by Rust-Analyzer) work
[lib]
bench = false
doctest = false
test = false

[dependencies]
defmt = "0.3.0"
rustBoot = {path = "../../rustBoot", default-features = true}
rustBoot-hal = {path = "../hal", default-features = true}

[features]
default = ["defmt-default"]
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []