[package]
build = "build.rs"
edition = "2018"
name = "nrf52840"
version = "0.1.0"

# makes `cargo check --all-targets` work
[[bin]]
bench = false
doctest = false
name = "nrf52840"
test = false

[dependencies]
cortex-m-rt = "0.6.15"
defmt = "0.3.0"
defmt-rtt = {version = "0.3.1"}
panic-probe = {version = "0.3.0", features = ["print-defmt"]}
rustBoot-hal = {path = "../../hal", features = ["nrf52840", "nrf"]}
rustBoot-update = {path = "../../update"}

[features]
default = ['defmt-default']
# these features are required by defmt
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []

# [workspace]
