[package]
build = "build.rs"
edition = "2018"
name = "nrf52840"
version = "0.1.0"

# makes `cargo check --all-targets` work
[[bin]]
bench = false
doctest = false
name = "nrf52840"
test = false

[dependencies]
cortex-m-rt = "0.6.15"
defmt = {version = "0.3.1", optional = true}
defmt-rtt = {version = "0.3.2", optional = true}
panic-probe = {version = "0.3.0", features = ["print-defmt"]}
rustBoot-hal = {path = "../../hal", features = ["nrf52840", "nrf"]}
rustBoot-update = {path = "../../update"}

[features]
default = ["defmt", "defmt-rtt"]

# [workspace]
