[package]
edition = "2021"
name = "rp2040"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
rp2040-boot2 = "0.2.0"
rustBoot-hal = { path = "../../hal", default-features = false, features = ["rp2040"] }
rustBoot-update = { path = "../../update", features = ["rp2040"] }

# defmt = { version = "0.3.0", optional = true }
# defmt-rtt = { version = "0.3.0", optional = true }
# panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# [features]
# default = ["defmt", "defmt-rtt"]
