[package]
edition = "2021"
name = "rpi4"
version = "0.1.0"

[[bin]]
name = "kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = {version = "7.0.1"}
log = {version = "0.4.16", default-features = false}
rustBoot = {path = "../../../rustBoot", default-features = true}
rustBoot-hal = {path = "../../hal", default-features = false, features = ["rpi", "rpi4"]}
tock-registers = {version = "0.7.x", default-features = false, features = ["register_types"]}
