[package]
name = "stm32f411"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
doctest = false
name = "stm32f411"
test = false

[dependencies]
cortex-m-rt = "0.6.14"
defmt = "0.3.0"
defmt-rtt = {version = "0.3.1"}
panic-probe = {version = "0.3.0", features = ["print-defmt"]}
rustBoot-hal = {path = "../../rustBoot-hal", default-features = false, features = ["stm32f411"]}
rustBoot-update = {path = "../../rustBoot-update"}

[features]
default = ['defmt-default']
# these features are required by defmt
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []

# [workspace]
