[package]
name = "stm32f411"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
doctest = false
name = "stm32f411"
test = false

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.6.15"
# defmt = {version = "0.3.1", optional = true}
# defmt-rtt = {version = "0.3.2", optional = true}
rustBoot-hal = {path = "../../hal", default-features = false, features = ["stm32f411"]}
rustBoot-update = {path = "../../update", features = ["stm32f411"]}

[features]
default = []

# [workspace]
