[package]
name = "stm32f746"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
doctest = false
name = "stm32f746"
test = false


[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
defmt = {version = "0.3.2", optional = true}
defmt-rtt = {version = "0.3.2", optional = true}
rustBoot-hal = {path = "../../hal", default-features = false, features = ["stm32f746"]}
rustBoot-update = {path = "../../update", features = ["stm32f746"]}
# board specific dependencies
stm32f7xx-hal = {version = "0.7.0", features = ["stm32f746", "rt"]}


[features]
default = ["defmt","defmt-rtt"]
