[package]
name = "rpi4"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "kernel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = { version = "0.7.x", default-features = false, features = ["register_types"] }
byteorder = { version = "1.4.3", default-features = false }

# Platform specific dependencies
# [target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "6.x.x" }

[features]
log = []