[package]
name = "nrf52840_bootfw"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# makes `cargo check --all-targets` work
[[bin]]
name = "nrf52840_bootfw"
bench = false
doctest = false
test = false

[dependencies]
# defmt = "0.2.3"
# defmt-rtt = "0.2.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
nrf52840-hal = "0.16.0"
panic-probe = { version = "0.3.0" }
rustBoot-hal = {path = "../../../hal", default-features = false, features = ["nrf52840", "nrf"]}
rustBoot-update = {path = "../../../update", features = ["nrf52840"]}

[features]


# [workspace]