[package]
edition = "2021"
name = "rp2040_updtfw"
version = "0.1.0"
resolver = "2"

[[bin]]
name = "rp2040_updtfw"
bench = false
doctest = false
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rp2040-hal = "0.7.0"
rustBoot-hal = { path = "../../../hal", default-features = false, features = ["rp2040"]}
rustBoot-update = { path = "../../../update", features = ["rp2040"] }

# defmt = { version = "0.3.0", optional = true }
# defmt-rtt = { version = "0.3.0", optional = true }
# panic-probe = { version = "0.3.0", features = ["print-defmt"] }

# [features]
# default = ["defmt", "defmt-rtt"]
