[package]
name = "stm32f411_bootfw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stm32f411_bootfw"
bench = false
doctest = false
test = false

[dependencies]
# defmt = {version = "0.3.1", optional = true}
# defmt-rtt = {version = "0.3.2", optional = true}
cortex-m = "0.7.4"
cortex-m-rt = "0.6.15"
rustBoot-hal ={path = "../../../hal",default-features = false,features = ["stm32f411"]}
panic-probe = { version = "0.2.0" }
rustBoot-update = {path = "../../../update", features = ["stm32f411"]}

# board-specific features
[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["stm32f411"]

[features]
default = []