[package]
name = "stm32f411_updtfw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stm32f411_updtfw"
bench = false
doctest = false
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
rustBoot-hal ={path = "../../../hal",default-features = false,features = ["stm32f411"]}
rustBoot-update = {path = "../../../update", features = ["stm32f411"]}

# board-specific features
[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["rt", "stm32f411"]
